--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fs-extra": "^6.0.1",
     "http-proxy-middleware": "^0.18.0",
     "json-server": "^0.14.0",
+    "koa-helmet": "^4.0.0",
     "lodash": "^4.17.10",
     "meow": "^5.0.0",
     "opn": "^5.3.0",
