--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Developement server using Koa with Socket.io reload and Javascript remote debugger",
   "main": "index.js",
   "scripts": {
-    "test": "DEBUG=gulp-server-io* nyc ava --verbose --timeout=10s",
+    "test": "DEBUG=server-io-core* nyc ava --verbose --timeout=10s",
     "prepublish-Only": "nsp check",
     "pretest": "eslint . --fix",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "dev": "DEBUG=server-io-core* node ./demo/base.js"
   },
   "repository": {
     "type": "git",
@@ -32,9 +33,11 @@
     "chokidar": "^2.0.4",
     "fancy-log": "^1.3.2",
     "fs-extra": "^6.0.1",
-    "http-proxy-middleware": "^0.18.0",
     "json-server": "^0.14.0",
+    "koa": "^2.5.2",
     "koa-helmet": "^4.0.0",
+    "koa-nginx": "^1.1.3",
+    "koa-static": "^5.0.0",
     "lodash": "^4.17.10",
     "meow": "^5.0.0",
     "opn": "^5.3.0",
