--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "koa": "^2.5.2",
     "koa-helmet": "^4.0.0",
     "koa-nginx": "^1.1.3",
-    "koa-static": "^5.0.0",
+    "koa-send": "^5.0.0",
     "lodash": "^4.17.10",
     "meow": "^5.0.0",
     "opn": "^5.3.0",
