--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "lint-staged": "^7.2.0",
     "nsp": "^3.2.1",
     "nyc": "^12.0.2",
-    "prettier": "^1.13.7"
+    "prettier": "^1.13.7",
+    "superkoa": "^1.0.3"
   },
   "lint-staged": {
     "*.js": [
