--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Developement server using Koa with Socket.io reload and Javascript remote debugger",
   "main": "index.js",
   "scripts": {
-    "test": "ava --timeout=10s",
+    "test": "ava",
     "devtest": "DEBUG=server-io-core* nyc ava --verbose --timeout=10s",
     "cli": "DEBUG=server-io-core* node ./cli",
     "prepublish-Only": "nsp check",
