--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server-io-core",
-  "version": "1.0.0-alpha.4",
+  "version": "1.0.0-alpha.5",
   "description": "Developement server using Koa with Socket.io reload and Javascript remote debugger",
   "main": "index.js",
   "scripts": {
@@ -35,6 +35,7 @@
     "chokidar": "^2.0.4",
     "fancy-log": "^1.3.2",
     "fs-extra": "^6.0.1",
+    "glob": "^7.1.2",
     "json-server": "^0.14.0",
     "koa": "^2.5.2",
     "koa-helmet": "^4.0.0",
