--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server-io-core",
-  "version": "1.0.0-alpha.5",
+  "version": "1.0.0-alpha.6",
   "description": "Developement server using Koa with Socket.io reload and Javascript remote debugger",
   "main": "index.js",
   "scripts": {
@@ -38,6 +38,7 @@
     "glob": "^7.1.2",
     "json-server": "^0.14.0",
     "koa": "^2.5.2",
+    "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^4.0.0",
     "koa-nginx": "^1.1.3",
     "koa-send": "^5.0.0",
