--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-config-xo": "^0.23.0",
     "eslint-plugin-prettier": "^2.6.1",
     "husky": "^0.14.3",
+    "koa-socket-2": "^1.0.17",
     "lint-staged": "^7.2.0",
     "nsp": "^3.2.1",
     "nyc": "^12.0.2",
