--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "cheerio": "^1.0.0-rc.2",
     "chokidar": "^2.0.4",
     "fancy-log": "^1.3.2",
-    "fs-extra": "^6.0.1",
+    "fs-extra": "^7.0.1",
     "glob": "^7.1.2",
     "json-server": "^0.14.0",
     "koa": "^2.5.2",
@@ -49,17 +49,17 @@
     "stacktrace-js": "^2.0.0"
   },
   "devDependencies": {
-    "ava": "1.0.0-beta.6",
-    "debug": "^3.1.0",
+    "ava": "^1.2.1",
+    "debug": "^4.1.1",
     "eslint": "^5.0.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-config-xo": "^0.23.0",
-    "eslint-plugin-prettier": "^2.6.1",
-    "husky": "^0.14.3",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-config-xo": "^0.26.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "husky": "^1.3.1",
     "koa-socket-2": "^1.0.17",
-    "lint-staged": "^7.2.0",
+    "lint-staged": "^8.1.4",
     "nsp": "^3.2.1",
-    "nyc": "^12.0.2",
+    "nyc": "^13.3.0",
     "prettier": "^1.13.7",
     "socket.io-client": "^2.1.1",
     "superkoa": "^1.0.3"
