--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "ava",
     "devtest": "DEBUG=server-io-core* nyc ava --verbose --timeout=10s",
     "cli": "DEBUG=server-io-core* node ./cli",
-    "prepublish-Only": "nsp check",
+    "prepublish-Only-x": "nsp check",
     "pretest": "eslint . --fix",
     "precommit": "lint-staged",
     "demo": "DEBUG=server-io-core* node ./__tests__/fixtures/demo"
@@ -58,7 +58,6 @@
     "husky": "^1.3.1",
     "koa-socket-2": "^1.0.17",
     "lint-staged": "^8.1.4",
-    "nsp": "^3.2.1",
     "nyc": "^13.3.0",
     "prettier": "^1.13.7",
     "socket.io-client": "^2.1.1",
