--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "ava",
-    "devtest": "DEBUG=server-io-core* nyc ava --verbose --timeout=10s",
-    "proxy": "node ./__tests__/fixtures/proxy.js",
-    "client": "node ./__tests__/fixtures/client.js",
+    "devtest": "DEBUG=server-io-core* ava --verbose",
     "cli": "DEBUG=server-io-core* node ./cli",
-    "prepublish-Only-x": "nsp check",
     "pretest": "eslint . --fix",
     "precommit": "lint-staged",
     "demo": "DEBUG=server-io-core* node ./__tests__/fixtures/demo"
@@ -44,11 +41,11 @@
     "koa-helmet": "^4.0.0",
     "koa-nginx": "^1.1.3",
     "koa-send": "^5.0.0",
-    "lodash": "^4.17.10",
     "meow": "^5.0.0",
     "opn": "^5.3.0",
     "socket.io": "^2.1.1",
-    "stacktrace-js": "^2.0.0"
+    "stacktrace-js": "^2.0.0",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "ava": "^1.2.1",
@@ -60,7 +57,6 @@
     "husky": "^1.3.1",
     "koa-socket-2": "^1.0.17",
     "lint-staged": "^8.1.4",
-    "node-fetch": "^2.3.0",
     "nyc": "^13.3.0",
     "prettier": "^1.13.7",
     "socket.io-client": "^2.1.1",
