--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "server-io-core",
-  "version": "1.0.0-beta.6",
+  "version": "1.0.0-beta.7",
   "description": "Developement server using Koa with Socket.io reload and Javascript remote debugger",
   "main": "index.js",
   "scripts": {
     "test": "ava --verbose",
-    "devtest": "DEBUG=server-io-core* ava --verbose",
+    "devtest": "DEBUG=server-io-core:test* ava --verbose",
     "cli": "DEBUG=server-io-core* node ./cli",
     "pretest": "eslint . --fix",
     "precommit": "lint-staged",
-    "demo": "DEBUG=server-io-core* node ./__tests__/fixtures/demo"
+    "demo": "DEBUG=server-io-core* node ./__tests__/fixtures/demo",
+    "test:demo": "DEBUG=server-io-core* ava ./__tests__/inject.test.js"
   },
   "repository": {
     "type": "git",
