--- a/package.json
+++ b/package.json
@@ -37,16 +37,17 @@
     "fancy-log": "^1.3.2",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.2",
+    "http-proxy": "^1.17.0",
     "koa": "^2.5.2",
     "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^4.0.0",
     "koa-nginx": "^1.1.3",
     "koa-send": "^5.0.0",
+    "lodash": "^4.17.11",
     "meow": "^5.0.0",
     "opn": "^5.3.0",
     "socket.io": "^2.1.1",
-    "stacktrace-js": "^2.0.0",
-    "lodash": "^4.17.11"
+    "stacktrace-js": "^2.0.0"
   },
   "devDependencies": {
     "ava": "^1.2.1",
