The proxy is not pass to the socket

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "precommit": "lint-staged",
     "demo": "DEBUG=server-io-core* node ./__tests__/fixtures/demo",
     "test:demo": "DEBUG=server-io-core* ava ./__tests__/inject.test.js",
-    "test:inject": "DEBUG=server-io-core* node ./__tests__/fixtures/run.js"
+    "test:inject": "DEBUG=server-io-core* node ./__tests__/fixtures/run.js",
+    "test:socket": "DEBUG=server-io-core* ava ./__tests__/proxy-socket.test.js"
   },
   "repository": {
     "type": "git",
