--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server-io-core",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Developement server using Koa with Socket.io reload and Javascript remote debugger",
   "main": "index.js",
   "scripts": {
@@ -48,7 +48,7 @@
     "koa-send": "^5.0.0",
     "lodash": "^4.17.11",
     "meow": "^5.0.0",
-    "opn": "^6.0.0",
+    "open": "^6.2.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "stacktrace-js": "^2.0.0"
