--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server-io-core",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Developement server using Koa with Socket.io reload and Javascript remote debugger",
   "main": "index.js",
   "scripts": {
@@ -41,6 +41,7 @@
     "fs-extra": "^7.0.1",
     "glob": "^7.1.4",
     "http-proxy": "^1.17.0",
+    "kefir": "^3.8.6",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^4.1.0",
