--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "lint-staged": "^8.2.1",
     "nyc": "^14.1.1",
     "prettier": "^1.18.2",
-    "superkoa": "^1.0.3"
+    "superkoa": "^1.0.3",
+    "through2": "^3.0.1"
   },
   "lint-staged": {
     "*.js": [
