--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-config-prettier": "^5.1.0",
     "eslint-config-xo": "^0.26.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "gulp": "^4.0.2",
     "husky": "^2.5.0",
     "koa-socket-2": "^1.1.0",
     "lint-staged": "^8.2.1",
