--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
     "open": "^6.4.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
-    "stacktrace-js": "^2.0.0",
-    "koa-socket-2": "^1.1.0"
+    "stacktrace-js": "^2.0.0"
   },
   "devDependencies": {
     "ava": "^2.2.0",
@@ -76,7 +75,8 @@
     "nyc": "^14.1.1",
     "prettier": "^1.18.2",
     "superkoa": "^1.0.3",
-    "through2": "^3.0.1"
+    "through2": "^3.0.1",
+    "koa-socket-2": "^1.1.0"
   },
   "lint-staged": {
     "*.js": [
