--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server-io-core",
-  "version": "1.2.0-beta.2",
+  "version": "1.2.0",
   "description": "Developement server using Koa with Socket.io reload and Javascript remote debugger",
   "main": "index.js",
   "files": [
@@ -48,7 +48,6 @@
     "fancy-log": "^1.3.3",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.4",
-    "http-proxy": "^1.17.0",
     "kefir": "^3.8.6",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
@@ -71,12 +70,12 @@
     "eslint-plugin-prettier": "^3.1.0",
     "gulp": "^4.0.2",
     "husky": "^3.0.2",
+    "koa-socket-2": "^1.1.0",
     "lint-staged": "^9.2.1",
     "nyc": "^14.1.1",
     "prettier": "^1.18.2",
     "superkoa": "^1.0.3",
-    "through2": "^3.0.1",
-    "koa-socket-2": "^1.1.0"
+    "through2": "^3.0.1"
   },
   "lint-staged": {
     "*.js": [
