--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server-io-core",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Developement server using Koa with Socket.io reload and Javascript remote debugger",
   "main": "index.js",
   "files": [
@@ -42,38 +42,38 @@
   },
   "homepage": "https://gitlab.com/newbranltd/server-io-core#README",
   "dependencies": {
-    "chalk": "^2.4.2",
-    "cheerio": "^1.0.0-rc.2",
-    "chokidar": "^3.0.2",
+    "chalk": "^3.0.0",
+    "cheerio": "^1.0.0-rc.3",
+    "chokidar": "^3.3.1",
     "fancy-log": "^1.3.3",
     "fs-extra": "^8.1.0",
-    "glob": "^7.1.4",
+    "glob": "^7.1.6",
     "kefir": "^3.8.6",
-    "koa": "^2.7.0",
+    "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
-    "koa-helmet": "^4.2.0",
+    "koa-helmet": "^5.2.0",
     "koa-nginx": "^1.1.3",
     "koa-send": "^5.0.0",
     "lodash": "^4.17.15",
-    "meow": "^5.0.0",
-    "open": "^6.4.0",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0",
-    "stacktrace-js": "^2.0.0"
+    "meow": "^6.0.1",
+    "open": "^7.0.2",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "stacktrace-js": "^2.0.2"
   },
   "devDependencies": {
-    "ava": "^2.2.0",
+    "ava": "^3.4.0",
     "debug": "^4.1.1",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-config-xo": "^0.26.0",
-    "eslint-plugin-prettier": "^3.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-xo": "^0.29.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "gulp": "^4.0.2",
-    "husky": "^3.0.2",
-    "koa-socket-2": "^1.1.0",
-    "lint-staged": "^9.2.1",
-    "nyc": "^14.1.1",
-    "prettier": "^1.18.2",
+    "husky": "^4.2.3",
+    "koa-socket-2": "^1.2.0",
+    "lint-staged": "^10.0.8",
+    "nyc": "^15.0.0",
+    "prettier": "^1.19.1",
     "superkoa": "^1.0.3",
     "through2": "^3.0.1"
   },
@@ -116,18 +116,19 @@
   },
   "ava": {
     "files": [
-      "tests/**/*.test.js",
-      "!tests/fixtures/**/*",
-      "!demo/**/*",
-      "!src/**/*"
+      "tests/**/*.test.js"
+    ],
+    "ignoredByWatcher": [
+      "tests/fixtures/**/*",
+      "demo/**/*",
+      "src/**/*"
     ],
     "verbose": true,
     "tap": false,
     "failFast": true
   },
   "bin": {
-    "server-io-core": "./cli.js",
-    "srvio": "./cli.js"
+    "server-io-core": "./cli.js"
   },
   "engines": {
     "node": ">=7.00"
