eslint link fucking wasted my time again

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "test": "ava",
     "devtest": "DEBUG=server-io-core:test* ava",
     "cli": "DEBUG=server-io-core* node ./cli",
-    "pretest": "eslint . --fix",
-    "precommit": "lint-staged",
+    "__pretest__": "eslint . --fix",
+    "__precommit__": "lint-staged",
     "demo": "DEBUG=server-io-core* node ./tests/fixtures/demo",
     "test:option": "DEBUG=server-io-core* ava ./tests/options.test.js",
     "test:favicon": "ava ./tests/favicon.test.js",
