--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   },
   "homepage": "https://github.com/NEWBRAN-LTD/server-io-core#README",
   "dependencies": {
-    "chalk": "^5.0.1",
+    "chalk": "4.1.2",
     "cheerio": "^1.0.0-rc.11",
     "chokidar": "^3.5.3",
     "fancy-log": "^2.0.0",
@@ -131,8 +131,5 @@
   },
   "bin": {
     "server-io-core": "./cli.js"
-  },
-  "engines": {
-    "node": ">=8.0.0"
   }
 }
