--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   },
   "homepage": "https://github.com/NEWBRAN-LTD/server-io-core#README",
   "dependencies": {
-    "chalk": "4.1.2",
+    "@to1source/event": "^1.5.1",
+    "chalk": "=4.1.2",
     "cheerio": "^1.0.0-rc.11",
     "chokidar": "^3.5.3",
     "fancy-log": "^2.0.0",
@@ -66,7 +67,7 @@
   "devDependencies": {
     "ava": "^4.3.0",
     "debug": "^4.3.4",
-    "eslint": "^8.17.0",
+    "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-xo": "^0.41.0",
     "eslint-plugin-prettier": "^4.0.0",
