--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "koa-nginx": "^1.1.3",
     "koa-send": "^5.0.1",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "meow": "^10.1.2",
     "open": "^8.4.0",
     "socket.io": "^4.5.1",
