it seems the unable to proxy over the ws is because socket.io is not really a socket server

--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "nyc": "^15.1.0",
     "prettier": "^2.7.1",
     "superkoa": "^1.0.3",
-    "through2": "^4.0.2"
+    "through2": "^4.0.2",
+    "ws": "^8.8.0"
   },
   "ava": {
     "files": [
