--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "server-io-core",
   "version": "2.0.0-beta.1",
   "description": "Developement server using Koa with Socket.io reload and Javascript remote debugger",
-  "main": "index.js",
+  "main": "index.mjs",
   "files": [
     "src",
-    "index.js",
-    "cli.js"
+    "index.mjs",
+    "cli.mjs"
   ],
   "scripts": {
     "test": "ava",
@@ -91,6 +91,7 @@
     "failFast": true
   },
   "bin": {
-    "server-io-core": "./cli.mjs"
+    "server-io-core": "./cli.mjs",
+    "serverio": "./cli.mjs"
   }
 }
