--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server-io-core",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0-beta.2",
   "description": "Developement server using Koa with Socket.io reload and Javascript remote debugger",
   "main": "index.mjs",
   "files": [
@@ -23,7 +23,7 @@
     "run:proxied": "DEBUG=server-io-core* node ./tests/fixtures/proxy.js",
     "start:server": "DEBUG=server-io-core* node ./tests/fixtures/test-proxy.js",
     "start:client": "DEBUG=server-io-core* node ./tests/fixtures/test-client.js",
-    "qunit": "node ./tests/qunit/run-qunit.mjs"
+    "qunit": "DEBUG=server-io-core:* node ./tests/qunit/run-qunit.mjs"
   },
   "repository": {
     "type": "git",
