--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "files": [
     "src",
     "index.mjs",
-    "cli.mjs"
+    "cli.mjs",
+    "rollup.js"
   ],
   "scripts": {
     "test": "ava",
@@ -49,13 +50,24 @@
     "koa-send": "^5.0.1",
     "lodash": "^4.17.21",
     "lodash.template": "^4.5.0",
-    "meow": "^10.1.2",
+    "meow": "^10.1.3",
     "open": "^8.4.0",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
     "stacktrace-js": "^2.0.2"
   },
   "devDependencies": {
+    "preact": "^10.8.1",
+    "preact-render-to-string": "^5.2.0",
+    "preact-router": "^4.0.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-preact-pure": "^4.0.1",
+    "eslint": "^6.0.1",
+    "eslint-config-preact": "^1.3.0",
+    "jest": "^28.1.1",
+    "jest-preset-preact": "^4.0.5",
+    "preact-cli": "^3.3.5",
+    "sirv-cli": "2.0.2",
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
