--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "server-io-core",
   "version": "2.0.0",
   "description": "Developement server using Koa with Socket.io reload and Javascript remote debugger",
-  "main": "index.mjs",
+  "main": "index.js",
   "module": "index.mjs",
   "files": [
     "src",
     "index.mjs",
+    "index.js",
+    "index.js.map",
     "cli.mjs",
-    "rollup.js"
+    "cli.js"
   ],
   "scripts": {
     "test": "ava",
@@ -17,7 +19,7 @@
     "cli": "DEBUG=server-io-core* node ./cli",
     "test:qunit": "DEBUG=server-io-core:* node ./tests/qunit/run-qunit.mjs",
     "test:dev:rollup": "rollup -c ./dev/rollup.config.mjs",
-    "test:rollup": "rollup -c ./rollup.config.mjs"
+    "build:rollup": "rollup -c ./rollup.config.mjs"
   },
   "repository": {
     "type": "git",
@@ -61,6 +63,7 @@
   "devDependencies": {
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/pluginutils": "^4.2.1",
     "ava": "^4.3.0",
