--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server-io-core",
-  "version": "2.0.1-beta.1",
+  "version": "2.0.1-beta.2",
   "description": "Developement server using Koa with Socket.io reload and Javascript remote debugger",
   "main": "index.js",
   "module": "index.mjs",
@@ -10,7 +10,9 @@
     "index.js",
     "index.js.map",
     "cli.mjs",
-    "cli.js"
+    "cli.js",
+    "helper.mjs",
+    "helper.js"
   ],
   "scripts": {
     "test": "ava",
