--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   ],
   "scripts": {
     "test": "ava",
-    "prepublishOnly": "npm run build:rollup && nyc ava",
-    "test:dev": "DEBUG=server-io-core:test* ava",
+    "prepublishOnly": "npm run build && nyc ava",
+    "build": "rollup -c ./rollup.config.mjs",
     "cli": "DEBUG=server-io-core* node ./cli",
+    "test:dev": "DEBUG=server-io-core:test* ava",
     "test:qunit": "DEBUG=server-io-core:* node ./tests/qunit/run-qunit.mjs",
-    "test:dev:rollup": "rollup -c ./dev/rollup.config.mjs",
-    "build:rollup": "rollup -c ./rollup.config.mjs"
+    "test:dev:rollup": "rollup -c ./dev/rollup.config.mjs"
   },
   "repository": {
     "type": "git",
