add back the folder in distribution

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "server-io-core",
-  "version": "2.1.0-beta.4",
+  "version": "2.1.0-beta.5",
   "description": "Developement server using Koa with Socket.io reload and Javascript remote debugger",
   "main": "index.js",
   "module": "index.mjs",
   "files": [
     "src",
+    "cjs",
+    "lib",
     "index.mjs",
     "index.js",
     "index.js.map",
