--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "homepage": "https://github.com/NEWBRAN-LTD/server-io-core#README",
   "dependencies": {
+    "@jsonql/utils": "^1.0.1",
     "@to1source/event": "^1.5.4",
     "cheerio": "^1.0.0-rc.12",
     "chokidar": "^3.5.3",
