--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cli.mjs",
     "cli.js",
     "helper.mjs",
-    "helper.js"
+    "helper.js",
+    "mastermind.mjs",
+    "mastermind.js"
   ],
   "scripts": {
     "test": "ava",
@@ -54,10 +56,8 @@
     "kefir": "^3.8.8",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
-    "koa-helmet": "^6.1.0",
     "koa-nginx": "^1.1.3",
     "koa-send": "^5.0.1",
-    "lodash": "^4.17.21",
     "lodash.template": "^4.5.0",
     "meow": "^10.1.3",
     "open": "^8.4.0",
