--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Developement server using Koa with Socket.io reload and Javascript remote debugger",
   "main": "index.js",
   "module": "index.mjs",
+  "type": "module",
   "files": [
     "src",
     "cjs",
