--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "server-io-core",
   "version": "2.4.0",
   "description": "Developement server using Koa with Socket.io reload and Javascript remote debugger",
-  "main": "index.js",
+  "main": "index.mjs",
   "module": "index.mjs",
   "files": [
     "src",
