--- a/package.json
+++ b/package.json
@@ -1,29 +1,22 @@
 {
   "name": "server-io-core",
-  "version": "2.4.1",
+  "version": "2.5.0",
   "description": "Developement server using Koa with Socket.io reload and Javascript remote debugger",
   "main": "index.mjs",
   "module": "index.mjs",
   "files": [
     "src",
-    "cjs",
     "lib",
     "index.mjs",
-    "index.js",
-    "index.js.map",
     "cli.mjs",
-    "cli.js",
     "helper.mjs",
-    "helper.js",
-    "mastermind.mjs",
-    "mastermind.js"
+    "mastermind.mjs"
   ],
   "scripts": {
     "test": "ava",
-    "prepublishOnly": "npm run build && nyc ava",
+    "prepublishOnly": "nyc ava",
     "build": "rollup -c ./rollup.config.mjs",
     "cli": "DEBUG=server-io-core* node ./cli.mjs",
-    "cli:cjs": "DEBUG=server-io-core* node ./cli.js",
     "test:dev": "DEBUG=server-io-core:test* ava",
     "test:qunit": "DEBUG=server-io-core:* node ./tests/qunit/run-qunit.mjs",
     "test:dev:rollup": "rollup -c ./dev/rollup.config.mjs"
@@ -78,7 +71,6 @@
     "eslint": "^8.19.0",
     "eslint-config-preact": "^1.3.0",
     "eslint-config-xo": "^0.41.0",
-    "esm": "^3.2.25",
     "gulp": "^4.0.2",
     "husky": "^8.0.1",
     "jest": "^28.1.2",
@@ -107,15 +99,11 @@
       "tests/**/*.test.mjs",
       "dev/**/*.test.mjs"
     ],
-    "require": [
-      "esm"
-    ],
     "verbose": true,
     "tap": false,
     "failFast": true
   },
   "bin": {
-    "server-io-core": "./cli.js",
-    "serverio": "./cli.mjs"
+    "server-io-core": "./cli.mjs"
   }
 }
